# IT_Assets_Management_System

./: .env.example  .gitignore  README.md  package-lock.json
backend/: package-lock.json  package.json
backend/scratch/: check_roles.ts  test-bcrypt.js
backend/src/: app.module.ts  data-source.ts  main.ts
backend/src/activity-logs/: activity-logs.controller.ts  activity-logs.module.ts  activity-logs.service.ts
backend/src/assets/: assets.controller.ts  assets.module.ts  assets.service.ts
backend/src/assignments/: assignments.controller.ts  assignments.module.ts  assignments.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/categories/: categories.controller.ts  categories.service.ts
backend/src/dashboard/: dashboard.controller.ts  dashboard.module.ts  dashboard.service.ts
backend/src/files/: files.controller.ts  files.module.ts  files.service.ts
backend/src/locations/: locations.controller.ts  locations.module.ts  locations.service.ts
backend/src/maintenance/: maintenance.controller.ts  maintenance.module.ts  maintenance.service.ts
backend/src/migrations/: 1776678909069-InitialSchema.ts  1776687014191-AddStatusEntity.ts  1776700000000-CreateUserRolesTable.ts  1776700000001-AddIsActiveToUsers.ts  (+3 more)
frontend/: .gitignore  angular.json  build_output.txt  ngsw-config.json  package-lock.json  package.json  proxy.conf.json  tailwind.config.js
frontend/src/: main.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: mobile.json
frontend/src-tauri/src/: lib.rs
(+117 files in other folders)
